--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <!-- <div id="app"></div> -->
+    <div class="todos">
+      <div class="todo-input">
+        <input type="text" id="todo-input"/>
+        <button id="add-todo-btn">Add Todo</button>
+      </div>
+  
+      <ul id="todo-list">
+      </ul>
+    </div>
     <script type="module" src="/main.js"></script>
-    <script type="module" src="./store.js"></script>
   </body>
 </html>
